<resources>
    <string name="app_name">That\'s It</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="gcm_defaultSenderId">354278772391</string>
    <string name="edittext_hint_Login_Password"><font size="9">Login Pass 1 (6 Diff Digits)</font></string>
    <string name="edittext_hint_Confirm_Login_Password"><font size="9">Confirm Login Password 1</font></string>
    <string name="edittext_hint_Chat_Password"><font size="9">Chat Pass 2 (Another 6 Diff Digits)</font></string>
    <string name="edittext_hint_Confirm_Chat_Password"><font size="9">Confirm Chat Password 2</font></string>
    <string name="edittext_hint_old_login_password"><font size="10">Old Login Password 1</font></string>
    <string name="edittext_hint_new_login_password"><font size="10">New Login Pass 1 (6 Diff Digits)</font></string>
    <string name="edittext_hint_Confirm_new_login_password"><font size="10">Confirm New Login Pass 1</font></string>
    <string name="edittext_hint_old_chat_password"><font size="11">Old Chat Password 2</font></string>
    <string name="edittext_hint_new_chat_password"><font size="11">New Chat Pass 2 (6 Diff Digits)</font></string>
    <string name="edittext_hint_Confirm_new_chat_password"><font size="11">Confirm New Chat Pass 2</font></string>
    <string name="Login_Password">Login Password 1</string>
    <string name="Confirm_Login_Password">Confirm Login Password 1</string>
    <string name="Chat_Password">Chat Password 2</string>
    <string name="Confirm_Chat_Password">Confirm Chat Password 2</string>
    <string name="change_login_password"><u>Change Login Password 1</u></string>
    <string name="Activate_Message_Password">Change Chat Password 2</string>
    <string name="Create_Group"><font size="14">Enter Group Name</font></string>
    <string name="Create_Password">Create Password</string>
    <string name="Enter_Password">Login Password</string>
    <string name="Enter_username">Email</string>
    <string name="Confirm_Password">Confirm Login Password</string>
    <string name="Group_Profile">Group Profile</string>
    <string name="Payment_Confirmation">Payment Confirmation</string>
    <string name="Congratulations">Congratulations!</string>
    <string name="Id_Succesful">Your ID has been successfully generated.</string>
    <string name="Essential_Below">Please find the essentials below:</string>
    <string name="payment">Payment</string>
    <string name="Sign_In">Sign In</string>
    <string name="msg_subject_key">msg_subject_key</string>
    <string name="welcome">Welcome to That\'s It</string>
    <string name="welcome_text">Sign In to That\'s It with your unique ID.</string>
    <string name="welcome_text2">If you don\'t have one, you can buy now. </string>
    <string name="need_id">You would need to purchase the ID for</string>
    <string name="dollar">$2:00.</string>
    <string name="App_Pass_Text">*** This password is application password.</string>
    <string name="App_Pass_Text2">User would need to enter this to unlock the App.</string>
    <string name="Contact">Contacts</string>
    <string name="ProfileDescrp">Morbi sed ornare felis Integer ut porta,non tempus arcu.sed eget egestas sapien aadipiscing nisi suspendisse varius ipsum eu dui lobotis molestie.Duis Conscuetor Velit sed quam egestus,tristique interdum lorem congue.</string>
    <string name="Profile_Info">Profile Information:</string>
    <string name="WritingMessage">is writing a message..</string>
    <string name="Rec_Inv_Message">Hey there! I would like to add you to my list.</string>
    <string name="this_passwrd">*** This password is application password.</string>
    <string name="user_need">User would need to enter this in order to</string>
    <string name="unlock">unlock the app.</string>
    <string name="payConfirm_MyquickId">THAT\'S IT ID  :    </string>
    <string name="payConfirm_DaysLeftVal">7 July, 2015</string>
    <string name="payConfirm_DaysLeft">DAYS LEFT    :    </string>
    <string name="Reg_registers">Register</string>
    <string name="Reg_Pincode">Pincode :</string>
    <string name="Reg_ChatPasswrd">Chat Password</string>
    <string name="Reg_Con_ChatPasswrd">Confirm Chat Password</string>
    <string name="Network_Availability">No Network Available</string>
    <string name="Id">ID</string>
    <string name="Created_on">Created On</string>
    <string name="action">Action</string>
    <string name="amount">Amount</string>
    <string name="using_ThatIt">Hi There I am using that\'s it app</string>
    <string name="status_avlable">Available</string>
    <string name="status">Status</string>
    <string name="Adap_Contact_Uname">My Name</string>
    <string name="retry_text"><u>Tap To Refresh</u></string>
    <string name="set_notification_tone"><u>Set Notification Tone</u></string>
    <string name="account">Account</string>
    <string name="days_Left">Days Left For ID To Expire:</string>
    <string name="expiration_date">Expiration Date:</string>
    <string name="expire">Expiry Date  : </string>
    <string name="Copy">Copy</string>
    <string name="Change_Profile_Pic">Change Profile Pic</string>
    <string name="Change_Password">Change Password</string>
    <string name="status_busy">Busy</string>
    <string name="tag_line">Tag Line:</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibrateOn">On</string>
    <string name="vibrateOff">Off</string>
    <string name="User_Name">Andrew Patterson</string>
    <string name="Add_profileDes">Add Profile Description</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="user_age">Age</string>
    <string name="user_State">State</string>
    <string name="user_City">City</string>
    <string name="using_MyQuickApp">Hi! I am using That\'s It</string>
    <string name="id_expired">Your That\'s It ID has expired. Kindly get it renewed to proceed.</string>
    <string name="connection_error">Connection could not be established at the moment.Do you want to reconnect again?</string>
    <string name="contact_name">Megan Acheson</string>
    <string name="roster_profile_pic_tag">roster_user_profile_pic</string>
    <string name="passwrds">Password</string>
    <string name="Old_passwrds">Old Password</string>
    <string name="New_passwrds">New Password</string>
    <string name="Confirm_New_passwrds">Confirm New Password</string>
    <string name="Enter_Message">Enter message</string>
    <string name="chat">Chat Screen</string>
    <string name="chatHistory">Chat History</string>
    <string name="Search_Contacts">Search Contact ID</string>
    <string name="prompt">Country</string>
    <string name="Contacts_Profile">Contacts Profile</string>
    <string name="Add_Pseudo_Name">Add Pseudo Name</string>
    <string name="invitation_received">Invitations Received</string>
    <string name="invitation_sent">Invitations Sent</string>
    <string name="invitation">Invite</string>
    <string name="enter_id">Enter ID:</string>
    <string name="message">Message:</string>
</resources>