<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background_img"
              android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/createPass_header_rellayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#474C52" >

        <TextView
            android:id="@+id/createPass_relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:text="Change Password"
            android:textColor="#ffffff"
            android:textSize="@dimen/title_text"
            android:textStyle="bold" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        <EditText
            android:id="@+id/edt_enterOldPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
            android:background="@drawable/enter_password_img"
            android:ems="10"
            android:layout_marginTop="40dp"
            android:hint="@string/edittext_hint_old_login_password"
            android:inputType="textPassword"
            android:longClickable="false"
            android:maxLength="15"
            android:paddingLeft="52dp"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/edt_enterNewPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/enter_password_img"
            android:ems="10"
            android:hint="@string/edittext_hint_new_login_password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:longClickable="false"
            android:paddingLeft="52dp"
            android:singleLine="true"
            />


        <EditText
            android:id="@+id/edt_confirmNewPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/confirm_password_img"
            android:ems="10"
            android:layout_marginTop="25dp"
            android:hint="@string/edittext_hint_Confirm_new_login_password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingLeft="52dp"
            android:longClickable="false"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />


        <Button
            android:id="@+id/createPass_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/submit_btn_selector" />


        <TextView
            android:id="@+id/createPass_txtview_message1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/this_passwrd"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/createPass_txtview_message2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_need"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/createPass_txtview_message3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unlock"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textSize="15sp" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>