<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_img" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fragInvite_tabs_lnrlayout" >

        <RelativeLayout
            android:id="@+id/top_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/fragActChatSet_rel_status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/fragActChatSet_tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/status"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radio_grpStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_toRightOf="@id/fragActChatSet_tv_status"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/fragActChatSet_Radio_avl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:button="@android:color/transparent"
                        android:drawableLeft="@drawable/tick"
                        android:text="@string/status_avlable"
                        android:drawablePadding="5dp"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/fragActChatSet_Radio_busy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:button="@android:color/transparent"
                        android:checked="true"
                        android:drawablePadding="5dp"
                        android:drawableLeft="@drawable/unradio_btn"
                        android:text="@string/status_busy"
                        android:textSize="20sp" />
                </RadioGroup>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_AddName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragActChatSet_rel_status"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/text_PseudoName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textStyle="bold"
                    android:text="@string/Add_Pseudo_Name"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/edt_tagLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:ellipsize="marquee"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:hint="@string/using_MyQuickApp"
                    android:singleLine="true"
                    android:textSize="18sp" >
                </TextView>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/fragActChatSet_rel_vibrate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_AddName"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/fragActChatSet_tv_vibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="25dp"
                    android:text="@string/vibrate"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radio_grpVibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_toRightOf="@id/fragActChatSet_tv_vibrate"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/fragActChatSet_Radio_VibrateOn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@android:color/transparent"
                        android:drawableLeft="@drawable/unradio_btn"
                        android:text="@string/vibrateOn"
                        android:drawablePadding="5dp"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/fragActChatSet_Radio_VibtareOff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:button="@android:color/transparent"
                        android:checked="true"
                        android:drawablePadding="5dp"
                        android:drawableLeft="@drawable/radio_btn"
                        android:text="@string/vibrateOff"
                        android:textSize="20sp" />
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/fragActChatSet_rel_activateMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragActChatSet_rel_vibrate"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/tv_setNotificationTone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/set_notification_tone"
                    android:textColor="#0000ff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/fragActChatSet_tv_activateMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_setNotificationTone"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/Activate_Message_Password"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/fragActChatSet_edt_Oldpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragActChatSet_tv_activateMsg"
                    android:layout_marginTop="20dp"
                    android:layout_alignLeft="@+id/fragActBasicSet_btn_Done"
                    android:layout_alignRight="@+id/fragActBasicSet_btn_Done"
                    android:background="@drawable/password_textfiled"
                    android:hint="@string/edittext_hint_old_chat_password"
                    android:longClickable="false"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:paddingLeft="10dp" />

                <EditText
                    android:id="@+id/fragActChatSet_edt_Newpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragActChatSet_edt_Oldpwd"
                    android:layout_marginTop="20dp"
                    android:singleLine="true"
                    android:longClickable="false"
                    android:layout_alignLeft="@+id/fragActBasicSet_btn_Done"
                    android:layout_alignRight="@+id/fragActBasicSet_btn_Done"
                    android:background="@drawable/password_textfiled"
                    android:hint="@string/edittext_hint_new_chat_password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:paddingLeft="10dp" />

                <EditText
                    android:id="@+id/fragActChatSet_edt_confNewPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragActChatSet_edt_Newpwd"
                    android:layout_marginTop="20dp"
                    android:layout_alignLeft="@+id/fragActBasicSet_btn_Done"
                    android:layout_alignRight="@+id/fragActBasicSet_btn_Done"
                    android:background="@drawable/password_textfiled"
                    android:hint="@string/edittext_hint_Confirm_new_chat_password"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:paddingLeft="10dp" />

                <Button
                    android:id="@+id/fragActBasicSet_btn_Done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragActChatSet_edt_confNewPwd"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="30dp"
                    android:background="@drawable/done_btn_selector" />

           <View
               android:layout_width="wrap_content"
               android:layout_height="140dp"
               android:layout_below="@+id/fragActBasicSet_btn_Done"/>

            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/fragInvite_tabs_lnrlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/contact_bottom_bar"
        android:orientation="horizontal"
        android:padding="3dp"
        android:weightSum="100" >

        <RelativeLayout
            android:id="@+id/rel1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="33"
            android:paddingBottom="10dp" >

            <Button
                android:id="@+id/fragActChatSet_btn_basicSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/basic_settings_hover" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:paddingBottom="10dp" >

            <Button
                android:id="@+id/fragActChatSet_btn_chatSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/chat_settings" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:paddingBottom="10dp" >

            <Button
                android:id="@+id/fragActChatSet_btn_paymentSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/payment_settings_hover" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>